# rust_hadoop_streaming

./: .gitignore  Cargo.toml  README.md
mapper/: mapper.rs
ncdc_data/: 1901.all  1904.all  1905.all
reducer/: reducer.rs
samples/: sample.txt
src/: mapper.rs  reducer.rs
